builder/tests/08-unrecognized-attribute.stderr
error: Unrecognized `eac` parameter
  --> tests/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^
